Fixing wrap div

--- a/src/Features/EmpowerSection/Empower.module.css
+++ b/src/Features/EmpowerSection/Empower.module.css
@@ -117,6 +117,7 @@ margin-top: 2rem;
         align-items: center;
         flex-direction: column;
         margin-left: -5.41rem;
+        padding-right: -4rem;
 
     }
 
